@@ -1,3 +1,11 @@
+2014-01-25  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[pq int] De-bifurcate module init flow.
+
+	* libpq.c (MOD_INIT_LINK_THUNK): Remove surrounding
+	preprocessor conditional and related ‘!USE_CMOD’ branch.
+	* Makefile.am (postgres) [!USE_CMOD]: Update link func name template.
+
 2014-01-24  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Do sofix/uninstall-sofixed unconditionally.
